--- a/templetes/Login.html
+++ b/templetes/Login.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Login">
     <meta name="description" content="Login">
     <link rel="shortcut icon" href="https://www.gietuerp.in/#" type="image/x-icon">
-    <script src="{% static 'jquery-3.3.1.min.js.download' %}"></script>
+    <script src="https://www.gietuerp.in/Login/js/jquery-3.3.1.min.js"></script>
 
     <style>
         /* Scss variable  Created By Bikash on 21-Jan-2019 */
@@ -53,7 +53,7 @@
             padding: 0;
             color: #b2b2b2;
             font-family: Font-Light;
-            background: #fff url("{% static 'sidebar.jpg' %}") no-repeat;
+            background: #fff url("https://www.gietuerp.in/Login/images/sidebar.jpg") no-repeat;
         }
 
         a {
@@ -252,7 +252,7 @@
             body {
                 height: 100vh;
                 overflow: hidden;
-                background: linear-gradient(#00000054, #0000004a), url("{% static 'backgroundImg.jpg' %}");
+                background: linear-gradient(#00000054, #0000004a), url("https://www.gietuerp.in/Login/images/backgroundImg.jpg");
                 background-blend-mode: multiply;
                 background-size: cover;
                 /* animation: shrink 5s infinite alternate; */
@@ -274,7 +274,7 @@
                 min-height: 200px;
                 justify-content: space-between;
                 align-items: center;
-                background: #fff url("{% static 'sidebar.jpg' %}") no-repeat;
+                background: #fff url("https://www.gietuerp.in/Login/images/sidebar.jpg") no-repeat;
                 background-size: 50%;
                 box-shadow: 2px 16px 18px -11px #353535;
             }
@@ -322,7 +322,7 @@
         {% csrf_token %}
         <div class="login">
             <div class="login__header">
-                <img src="{% static 'logo.png' %}">
+                <img src="https://www.gietuerp.in/Login/images/logo.png">
             </div>
             <div class="login__content">
                 <h1 style="color: #00ced1">Login</h1>
@@ -335,7 +335,7 @@
                     <span id="usernameError" class="text-danger field-validation-valid" data-valmsg-for="vchUserName"
                         data-valmsg-replace="true"></span>
                     <a class="usershowbtn">
-                        <img src="{% static 'user.png' %}">
+                        <img src="https://www.gietuerp.in/Login/images/user.png">
                     </a>
                 </div>
                 <div class="form-group">
@@ -346,8 +346,8 @@
                     <span id="passwordError" class="text-danger field-validation-valid" data-valmsg-for="vchPassword"
                         data-valmsg-replace="true"></span>
                     <a class="passwordshowbtn">
-                        <img src="{% static 'hide.png' %}">
-                        <img src="{% static 'view.png' %}" alt="view" style="display:none">
+                        <img src="https://www.gietuerp.in/Login/images/hide.png">
+                        <img src="https://www.gietuerp.in/Login/images/view.png" alt="view" style="display:none">
                     </a>
                 </div>
                 <div class="text-right mt-1 mb-4">
@@ -356,7 +356,7 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td><img id="img-captcha" src="{% static 'get-captcha-image' %}"></td>
+                                <td><img id="img-captcha" src="https://www.gietuerp.in/get-captcha-image"></td>
                                 <td> <input type="text" class="form-control" placeholder="Captcha Code" maxlength="4"
                                         data-val="true"
                                         data-val-length="The field CaptchaCode must be a string with a maximum length of 4."
@@ -381,8 +381,8 @@
             </div>
         </div>
     </form>
-    <script src="{% static 'login.js.download' %}"></script>
-    <script src="{% static 'disableInspectElement.js.download' %}"></script>
+    <script src="https://www.gietuerp.in/js/login.js"></script>
+    <script src="https://www.gietuerp.in/js/ViewJS/disableInspectElement.js"></script>
 
 
 
